client-side chatName coloring. fixed coloring on initial join not showing

--- a/client/static/css/chat.css
+++ b/client/static/css/chat.css
@@ -53,7 +53,7 @@ div.chat_enter_name input.chat_enter_name_input {
     width: 100%;
     margin-top: 5px;
     margin-bottom: 2px;
-    background: rgba(75, 135, 168, 0.2);
+    background: rgba(138, 125, 139, 0.5);
 }
     .chatName span {
         padding: 3px 10px;
